@@ -26,6 +26,11 @@ import jakarta.ws.rs.client.ClientRequestFilter;
 
 /**
  * A Jersey implementation of <a href="https://github.com/kubernetes-client/java/blob/automated-release-21.0.1/util/src/main/java/io/kubernetes/client/util/credentials/TokenFileAuthentication.java">io.kubernetes.client.util.credentials.TokenFileAuthentication</a>.
+ *
+ * Comment taken from the above class:
+ * TODO: prefer OpenAPI backed Authentication once it is available. see details in
+ * <a href="https://github.com/OpenAPITools/openapi-generator/pull/6036">https://github.com/OpenAPITools/openapi-generator/pull/6036</a>. currently, the
+ * workaround is to hijack the http request.
  */
 final class TokenFileAuthentication implements ClientRequestFilter
 {
@@ -43,7 +48,7 @@ final class TokenFileAuthentication implements ClientRequestFilter
     {
         if (Instant.now().isAfter(this.expiry)) {
             try {
-                this.token = new String(Files.readAllBytes(Paths.get(this.file)), Charset.defaultCharset()).trim();
+                this.token = Files.readString(Paths.get(this.file), Charset.defaultCharset()).trim();
                 expiry = Instant.now().plusSeconds(60);
             } catch (final IOException ie) {
                 throw new RuntimeException("Cannot read token file: " + this.file, ie);
